--- a/30_Day_Mini_project_final/project_1/index.html
+++ b/30_Day_Mini_project_final/project_1/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>30DaysOfJavaScript:30 </title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>30DaysOfJavaScript:30</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 
 <body>
-   
+  <header>
+    <h1 class="title">World Countries List</h1>
+    <p class="subtitle">Currently, we have # countries</p>
+    <p class="search-criteria"># countries satisfied the search criteria</p>
+  </header>
 
-    <script src="./data/countries_data.js"></script>
-    <script src="./scripts/main.js"></script>
+  <div class="search-container">
+    <div class="search-wrapper">
+      <input id="search" type="text" placeholder="Search country by name, capital and languages">
+    </div>
 
+    <div class="button-wrapper">
+      <button id="name">name</button>
+      <button id="capital">capital</button>
+      <button id="population">population</button>
+      <i class="fas fa-chart-bar"></i>
+    </div>
+  </div>
+
+  <div class="countries-container">
+    <div class="country-wrapper"></div>
+  </div>
+
+  <!-- <div class="chart-container">
+    <h4 class="chart-title">World Population</h4>
+    <h4 class="chart-title">10 Most Populated Countries In The World</h4>
+    <div class="charts"></div>
+  </div>
+
+  <footer>
+    <button id="up">UP</button>
+  </footer> -->
+
+  <script src="./data/countries_data.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 
 </html>
