completed project 1 day 30

--- a/30_Day_Mini_project_final/project_1/index.html
+++ b/30_Day_Mini_project_final/project_1/index.html
@@ -29,7 +29,7 @@
       <button id="name">name</button>
       <button id="capital">capital</button>
       <button id="population">population</button>
-      <i class="fas fa-chart-bar"></i>
+      <a href="#chart" class="scroll-link-down" title="Population Charts"><i class="fas fa-chart-bar"></i></a>
     </div>
   </div>
 
@@ -37,15 +37,14 @@
     <div class="country-wrapper"></div>
   </div>
 
-  <!-- <div class="chart-container">
+  <div class="chart-container" id="chart">
     <h4 class="chart-title">World Population</h4>
-    <h4 class="chart-title">10 Most Populated Countries In The World</h4>
     <div class="charts"></div>
   </div>
 
-  <footer>
-    <button id="up">UP</button>
-  </footer> -->
+  <button id="up" class="scroll-link-up" title="Go To The Top Page">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 
   <script src="./data/countries_data.js"></script>
   <script src="./scripts/main.js"></script>
